--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .App-logo {
@@ -35,4 +37,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.fighters{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border: solid 2px goldenrod;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+button{
+  margin: 10px;
 }
