--- a/src/App.css
+++ b/src/App.css
@@ -65,4 +65,17 @@ button{
 
 .open-close{
   margin: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.open-close button{
+  height: 30px;
+  width: 100px;
+}
+
+.parade{
+  display: flex;
+  justify-content: center;
 }
