--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,8 @@ button{
 }
 
 .open-close{
-  margin: 100px;
+  padding: 100px;
+  margin: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,6 +74,14 @@ button{
 .open-close button{
   height: 30px;
   width: 100px;
+}
+
+.opened{
+  background-color: teal;
+}
+
+.closed{
+  background-color: orange;
 }
 
 .parade{
